# ChangeLog for dev-python/python-bibtex
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-bibtex/ChangeLog,v 1.32 2015/03/07 08:20:34 pacho Exp $

  07 Mar 2015; Pacho Ramos <pacho@gentoo.org> python-bibtex-1.2.7-r1.ebuild:
  ppc stable, bug 540290

  29 Jan 2015; Pacho Ramos <pacho@gentoo.org> python-bibtex-1.2.7-r1.ebuild:
  amd64/x86 stable, bug #531498

  26 Jan 2015; Manuel Rüger <mrueg@gentoo.org> -python-bibtex-1.2.4.ebuild,
  -python-bibtex-1.2.7.ebuild:
  Remove old.

*python-bibtex-1.2.7-r1 (25 Dec 2014)

  25 Dec 2014; Michał Górny <mgorny@gentoo.org> +python-bibtex-1.2.7-r1.ebuild:
  Convert to distutils-r1.

*python-bibtex-1.2.7 (03 May 2014)

  03 May 2014; Patrick Lauer <patrick@gentoo.org> +python-bibtex-1.2.7.ebuild:
  Bump

  04 May 2012; Patrick Lauer <patrick@gentoo.org> python-bibtex-1.2.4.ebuild,
  python-bibtex-1.2.5.ebuild:
  Migrating dev-util/pkgconfig -> virtual/pkgconfig

  06 Mar 2012; Brent Baude <ranger@gentoo.org> python-bibtex-1.2.5.ebuild:
  Marking python-bibtex-1.2.5 ppc for bug 397007

  22 Feb 2012; Patrick Lauer <patrick@gentoo.org> python-bibtex-1.2.4.ebuild,
  python-bibtex-1.2.5.ebuild:
  Restricting jython

  12 Feb 2012; Raúl Porcel <armin76@gentoo.org> python-bibtex-1.2.4.ebuild,
  python-bibtex-1.2.5.ebuild:
  Drop ia64, x86 stable wrt #397007

  03 Feb 2012; Agostino Sarubbo <ago@gentoo.org> python-bibtex-1.2.5.ebuild:
  Stable for amd64, wrt bug #397007

*python-bibtex-1.2.5 (03 May 2011)

  03 May 2011; Justin Lecher <jlec@gentoo.org> python-bibtex-1.2.4.ebuild,
  +python-bibtex-1.2.5.ebuild:
  Non-maintainer version bump, fix slotting for gnome3

  27 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-bibtex-1.2.4.ebuild, +files/python-bibtex-1.2.4-fix_tests.patch:
  Set SUPPORT_PYTHON_ABIS. Fix tests (bug #264439).

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> python-bibtex-1.2.4.ebuild: