@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/python-bibtex
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-bibtex/ChangeLog,v 1.32 2015/03/07 08:20:34 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-bibtex/ChangeLog,v 1.33 2015/03/08 13:35:35 mrueg Exp $
+
+  08 Mar 2015; Manuel Rüger <mrueg@gentoo.org> -python-bibtex-1.2.5.ebuild:
+  Remove old.
 
   07 Mar 2015; Pacho Ramos <pacho@gentoo.org> python-bibtex-1.2.7-r1.ebuild:
   ppc stable, bug 540290
